<resources>
    <string name="app_name">Cinema</string>
    <string name="movie_name_hint">Введите название фильма</string>
    <string name="find_movie">Поиск</string>
    <string name="search">Поиск</string>
    <string name="saved">Избранное</string>
    <string name="more">Подробнее</string>
    <string name="unknown">Unknown</string>
    <string name="year">Год</string>
    <string name="imdb">IMDB</string>
    <string name="minutes">мин.</string>
    <string name="mail_example">user@gmail.com</string>
    <string name="edit">Редактировать</string>
    <string name="night_mode">Ночной режим</string>
    <string name="username">FirstName LastName</string>
    <string name="clear_cache">Очистить кеш</string>
    <string name="kinopoisk">Кинопоиск</string>
    <string name="settings">Настройки</string>
    <string name="main">Основной</string>
    <string name="remove">Удалить</string>
    <string name="share">Поделиться</string>
    <string name="add">Добавить в избранное</string>
    <string name="empty_list">Список пуст</string>
    <string name="empty_response">Ничего не нашлось</string>
    <string name="movie_test_name">Законопослушный гражданин</string>
    <string name="top_rating">Фильмы с высоким рейтингом кинопоиска</string>
    <string name="description">Описание</string>
    <string name="profile">Профиль</string>
    <string name="help">Помощь</string>
    <string name="log_out">Выход</string>

    <string name="change_photo">Change photo</string>
    <string name="upload_item">Upload item</string>

    <string name="trade_store">Trade store</string>
    <string name="payment_method">Payment method</string>
    <string name="balance">Balance</string>
    <string name="trade_history">Trade history</string>
    <string name="restore_purchase">Restore Purchase</string>
</resources>