<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical"
        tools:context=".ui.SettingsFragment">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:letterSpacing="0.08"
            android:text="@string/profile"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:clickable="true"
            android:contentDescription="@string/add"
            android:focusable="true"
            android:src="@drawable/ic_outline_add_a_photo_24"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/username"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/avatar_image_view" />

        <Button
            android:id="@+id/download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingHorizontal="30dp"
            android:text="Загрузить фото" />


        <LinearLayout
            style="@style/SettingsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/MenuTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/night_mode" />
        </LinearLayout>

        <LinearLayout
            style="@style/SettingsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/outline_clear"
                tools:ignore="ContentDescription" />

            <TextView
                style="@style/MenuTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear_cache" />
        </LinearLayout>


        <LinearLayout
            style="@style/SettingsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/background_line"
                android:src="@drawable/baseline_help_outline" />

            <TextView
                style="@style/MenuTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help" />
        </LinearLayout>


        <LinearLayout
            style="@style/SettingsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_logout" />

            <TextView
                style="@style/MenuTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_out" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
